--- a/app/src/main/res/layout/activity_solicitud_de_cambio_borrar.xml
+++ b/app/src/main/res/layout/activity_solicitud_de_cambio_borrar.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".SolicitudDeCambioBorrarActivity">
 
+    <EditText
+        android:id="@+id/edtIdSolicitudCambio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="@string/numSolicitud"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnEliminar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:onClick="eliminarSolicitudDeCambio"
+        android:text="@string/eliminar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtIdSolicitudCambio" />
 </androidx.constraintlayout.widget.ConstraintLayout>
