--- a/app/src/main/res/layout/activity_solicitud_de_impresiones_consultar.xml
+++ b/app/src/main/res/layout/activity_solicitud_de_impresiones_consultar.xml
@@ -22,8 +22,8 @@
             android:id="@+id/botonConsultar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/consultar"
-            android:onClick="consultarDocente" />
+            android:text="consultar"
+            android:onClick="consultarSolicitudDeImpresiones" />
         <Button
             android:id="@+id/botonLimpiar"
             android:layout_width="wrap_content"
